--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -124,6 +124,10 @@
     @apply rounded-full checked:bg-white dark:checked:bg-gray-800 checked:border-6;
   }
 
+  input[type="search"] {
+    @apply w-full rounded-full px-4 py-2 border-gray-300 dark:border-gray-600;
+  }
+
   /* Tables */
   table {
     @apply w-full border-collapse table-auto text-left border-b-1 mt-3;
