--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,20 +1,20 @@
 = render "_shared/notice"
 
 - if @config.sales_hook_disabled?
-  article#webhook-error.w-5xl.h-fit.mx-auto.bg-red-100.rounded-xl.mb-8.text-red-700
-    header.p-8.h-24.flex.justify-between.items-center.border-b-4.border-red-800/5
+  article.h-fit.mx-auto.bg-red-100.rounded-xl.mb-8.text-red-700 class="dark:bg-red-800/60 dark:text-red-300"
+    header.p-8.h-24.flex.justify-between.items-center.border-b-4.border-red-800/5.dark:border-red-950/30
       i.icn.text-3xl 🪝
-      p.text-lg.font-semibold The WooCommerce sales webhook is deactivated
+      p.text-lg.font-semibold The WooCommerce Sales Webhook is Deactivated
       i.icn.text-3xl 🪝
     ol.list-decimal.h-fit.min-h-24.p-8.pl-16.text-lg
       li.mt-1 Change the webhook status to "Active" at <a href="https://store.handsomecake.com/wp-admin/admin.php?page=wc-settings&tab=advanced&section=webhooks&edit-webhook=3" target="_blank" class="link">the Woo settings page</a>.
       li.mt-2
-        | Then press this button:  
-        = link_to "pull-last-orders", class: "btn-rounded px-3 py-1 text-sm bg-transparent border-red-700"
-          | Get missing sales from Woo
+        | Afterward, hide this notification using this button:
+        = link_to "pull-last-orders", class: "btn-rounded btn-red bg-red-200/60 hover:bg-red-200 dark:bg-red-950 dark:hover:bg-red-900/70 text-sm ml-2", data: {"turbo-prefetch": "false"}
+          | Confirm Woo Webhook Active
 
 header
-  h1 Dashboard 
+  h1 Dashboard
 
 .section-border-base.section-wide
   h3.flex.justify-between.px-3.pt-4
