fix(woo): Add webhook error banner ID and update test text

--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,7 +1,7 @@
 = render "_shared/notice"
 
 - if @config.sales_hook_disabled?
-  article.h-fit.mx-auto.bg-red-100.rounded-xl.mb-8.text-red-700 class="dark:bg-red-800/60 dark:text-red-300"
+  article#webhook-error.h-fit.mx-auto.bg-red-100.rounded-xl.mb-8.text-red-700 class="dark:bg-red-800/60 dark:text-red-300"
     header.p-8.h-24.flex.justify-between.items-center.border-b-4.border-red-800/5.dark:border-red-950/30
       i.icn.text-3xl 🪝
       p.text-lg.font-semibold The WooCommerce Sales Webhook is Deactivated
