--- a/app/views/products/_modal_sync_menu.html.slim
+++ b/app/views/products/_modal_sync_menu.html.slim
@@ -1,4 +1,4 @@
 menu.flex.flex-col.gap-4.justify-between.pb-4
-  li = link_to "Pull Last 50 Products", pull_products_path(limit: 50), class: "w-full h-15 btn-blue btn-rounded"
-  li = link_to "Pull Everything", pull_products_path, class: "w-full h-15 btn-rounded"
+  li = link_to "Pull Last 50 Products", pull_products_path(limit: 50), class: "w-full h-15 btn-blue btn-rounded", data: {"turbo-prefetch": "false"}
+  li = link_to "Pull Everything", pull_products_path, class: "w-full h-15 btn-rounded", data: {"turbo-prefetch": "false"}
   li = link_to "Track Jobs Progress", "/jobs/statuses", class: "w-full h-15"
