--- a/app/views/_shared/_search-form.html.slim
+++ b/app/views/_shared/_search-form.html.slim
@@ -1,5 +1,5 @@
 = form_with(url: path, method: :get, class: "flex items-center w-full") do |form|
-  = form.text_field :q, type: :search, placeholder: "Find what you need...", value: params[:q], class: "#{params[:q].present? ? "border-2" : "border"}"
+  = form.text_field :q, type: :search, placeholder: "Find what you need...", value: params[:q], class: (params[:q].present? ? "border-2" : "border").to_s
   = button_tag type: :submit, class: "ml-2 btn-rounded"
     i.icn 🔎
     | Search
