--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -70,6 +70,6 @@
                 = payment_builder.number_field :value, step: :any
           - if Warehouse.any?
             = purchase_fields.label :warehouse_id, "Initial warehouse"
-            = purchase_fields.collection_select :warehouse_id, Warehouse.all.order(name: :asc), :id, :name, {selected: @default_warehouse_id}  
+            = purchase_fields.collection_select :warehouse_id, Warehouse.order(name: :asc), :id, :name, {selected: @default_warehouse_id}  
 
   = form_submit_for(product, form)
