--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -1,5 +1,22 @@
 = form_with model: product do |form|
-  fieldset.flex.justify-between.gap-4.-mt-6
+  fieldset.-mt-6
+    - if form.object.images.attached?
+      .block.w-full.my-4
+        label Current images
+        p.text-gray-600.dark:text-gray-500 Select any image you'd like to remove
+        .flex.flex-wrap.gap-2.mt-6
+          - form.object.images.each do |image|
+            .form-image-preview.text-center data-controller="form-image-removable"
+              = form.hidden_field :images, multiple: true, value: image.signed_id, data: {form_image_removable_target: "hiddenInput"}
+              = image_tag image.variant(:preview), data: {form_image_removable_target: "image", action: "click->form-image-removable#toggleImageScale"}, class: "relative w-40 rounded-sm border border-gray-200 dark:border-gray-700 cursor-zoom-in ease-out transition-all translate-x-0 translate-y-0 left-0 top-0 duration-200 z-0 shadow-none shadow-gray-950/30"
+              button.btn-red.btn-rounded.text-xs.my-2 data-form-image-removable-target="button" data-action="click->form-image-removable#remove" title="Remove"
+                = heroicon "minus-circle", variant: "micro"
+                | Remove
+    .block.w-full
+      = form.label :images, "New Images"
+      = form.file_field :images, multiple: true, direct_upload: true
+
+  fieldset.flex.justify-between.gap-4
     .block.w-full
       = form.label :franchise
       = form.collection_select(:franchise_id, Franchise.all, :id, :title, { class: "select" }, data: { controller: "slim-select" })
@@ -25,13 +42,13 @@
     .flex.justify-between.gap-4.px-4
       .block.w-full
         = form.label :size
-        = form.collection_select(:size_ids, Size.all, :id, :value, { class: "select" }, {multiple: true, data: { product_editions_target: "sizes" }})   
+        = form.collection_select(:size_ids, Size.all, :id, :value, { class: "select" }, {multiple: true, data: { product_editions_target: "sizes" }})
       .block.w-full
         = form.label :version
         = form.collection_select(:version_ids, Version.all, :id, :value, { class: "select" }, {multiple: true, data: { product_editions_target: "versions" }})
       .block.w-full
         = form.label :color
-        = form.collection_select(:color_ids, Color.all, :id, :value, {class: "select"}, {multiple: true, data: {show_search: false, product_editions_target: "colors"}})  
+        = form.collection_select(:color_ids, Color.all, :id, :value, {class: "select"}, {multiple: true, data: {show_search: false, product_editions_target: "colors"}})
     ul.px-4.mt-4.mb-2.flex.flex-wrap.gap-3.hidden data-product-editions-target="list"
 
   - if form.object.new_record?
@@ -70,6 +87,6 @@
                 = payment_builder.number_field :value, step: :any
           - if Warehouse.any?
             = purchase_fields.label :warehouse_id, "Initial warehouse"
-            = purchase_fields.collection_select :warehouse_id, Warehouse.order(name: :asc), :id, :name, {selected: @default_warehouse_id}  
+            = purchase_fields.collection_select :warehouse_id, Warehouse.order(name: :asc), :id, :name, {selected: @default_warehouse_id}
 
   = form_submit_for(product, form)
