--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -72,7 +72,11 @@
 
   /* Forms */
   label {
-    @apply block font-medium text-gray-900 dark:text-gray-100 mt-6 mb-2;
+    @apply block font-medium text-gray-900 dark:text-gray-100 mt-6 mb-3;
+  }
+
+  label + p {
+    @apply -mt-3 mb-3;
   }
 
   input,
