--- a/app/views/warehouses/_purchase_item.html.slim
+++ b/app/views/warehouses/_purchase_item.html.slim
@@ -6,9 +6,9 @@ tr(
   = render "_shared/move_to_warehouse/td", id: item.id
   td.max-w-sm
     = item.purchase.product.full_title
-    .font-mono.text-sm.text-gray-500.dark:text-gray-400 = item.purchase.product.sku || "123fsdfghds"
     - if item.purchase.edition.present?
       | → #{item.purchase.edition.title}
+    .font-mono.text-sm.text-gray-500.dark:text-gray-400 = item.purchase.product.sku
     - if item.sale
       = link_to item.sale, title: "Open sales page", class: "no-events text-sm mt-3"
         - if item.sale.shopify_id.present?
