feat: Add store icon to sales

--- a/app/views/products/_product_active_sales.html.slim
+++ b/app/views/products/_product_active_sales.html.slim
@@ -21,9 +21,13 @@
             data-table-url-param=sale_path(ps.sale)
           )
             - if ps.sale.shopify_id.present?
-              td.text-lime-800.dark:text-lime-600 = ps.sale.shopify_id_short
+              td
+                .inline-block.icon-shopify.w-5.h-5.mr-1.-mb-1
+                = ps.sale.shopify_id_short
             - if ps.sale.woo_id.present?
-              td.text-violet-800.dark:text-violet-600 = ps.sale.woo_id
+              td
+                .inline-block.icon-woo.w-8.h-8.mr-2.-mb-3
+                = ps.sale.woo_id
             td
               strong = ps.sale.customer.full_name
               br
