--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -20,11 +20,7 @@
             | Created  ▾
             br
             <span class="font-normal text-gray-500">Updated</span>
-          th Woo ID
-          th
-            | Shopify name
-            br
-            <span class="font-normal text-gray-500">Shopify ID</span>
+          th Store ID
           th.text-right Actions
       tbody
         = render @sales
