--- a/app/views/sales/_sale.html.slim
+++ b/app/views/sales/_sale.html.slim
@@ -19,11 +19,15 @@ tr.hoverable id="#{dom_id sale}" data-action="click->table#goTo" data-table-url-
     = format_date sale.shop_created_at.presence || sale.created_at
     br
     span.text-gray-500 = format_date sale.shop_updated_at.presence || sale.updated_at
-  td = sale.woo_id
   td
-    = sale.shopify_name
-    br
-    span.text-gray-500 = sale.shopify_id_short
+    - if sale.woo_id.present?
+      .inline-block.icon-woo.w-8.h-8.mr-1.-mb-3
+      = sale.woo_id
+    - if sale.shopify_id.present?
+      .inline-block.icon-shopify.w-5.h-5.mr-1.-mb-1
+      = sale.shopify_name
+      br
+      span.text-gray-500 = sale.shopify_id_short
   - if action_name != "show" 
     td.actions
       = render "_shared/action_edit", route: edit_sale_path(sale)
