feat: Add shipping companies management

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -39,6 +39,7 @@ html
               ul
                 li = link_to "Customers", customers_path, type: "button"
                 li = link_to "Suppliers", suppliers_path, type: "button"
+                li = link_to "Shipping Companies", shipping_companies_path, type: "button"
                 .pb-3
                 li = link_to "Brands", brands_path, type: "button"
                 li = link_to "Franchises", franchises_path, type: "button"
