--- a/app/views/_shared/_nav-index.html.slim
+++ b/app/views/_shared/_nav-index.html.slim
@@ -1,8 +1,8 @@
 - show_modal = false if local_assigns[:show_modal].nil?
 
 header.nav_header
-  h1 = model.model_name.plural.capitalize
-  - if Rails.application.routes.url_helpers.respond_to?("new_#{model.name.downcase}_path")
+  h1 = model.model_name.human.pluralize.titleize
+  - if Rails.application.routes.url_helpers.respond_to?("new_#{model.model_name.singular_route_key}_path")
     menu.nav_menu
       - if show_modal
         li data-controller="modal-trigger"
