--- a/app/views/warehouses/_purchase_items.html.slim
+++ b/app/views/warehouses/_purchase_items.html.slim
@@ -16,6 +16,7 @@
           = render "_shared/move_to_warehouse/th"
           th Title
           th Customer
+          th Tracking
           th Supplier
           th
             | Payment Progress
