--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -174,6 +174,10 @@
   }
 }
 
+.bg-green {
+  @apply  bg-lime-200/50 dark:bg-lime-900/50;
+}
+
 /* === Components === */
 @layer components {
   /* Navigation */
@@ -228,6 +232,9 @@
   }
   .undo {
     @apply bg-transparent hover:bg-transparent hover:text-red-400!;
+  }
+  .btn-green {
+    @apply text-lime-700 dark:text-lime-300 bg-lime-200/50 dark:bg-lime-900/50 hover:bg-lime-200/90 dark:hover:bg-lime-900/80;
   }
   .icn {
     @apply font-normal font-icn not-italic;
@@ -359,6 +366,7 @@
   }
 
   /* Forms: errors */
+  .text-error,
   .field_with_errors label,
   .field_with_errors textarea,
   .field_with_errors input {
