--- a/app/views/warehouses/_purchase_item.html.slim
+++ b/app/views/warehouses/_purchase_item.html.slim
@@ -4,7 +4,7 @@ tr(
   data-table-url-param=purchase_item_path(item)
 )
   = render "_shared/move_to_warehouse/td", id: item.id
-  td.max-w-sm
+  td.max-w-md
     = item.purchase.product.full_title
     - if item.purchase.edition.present?
       | → #{item.purchase.edition.title}
@@ -15,7 +15,7 @@ tr(
           .icon-shopify.w-4.h-4
         - if item.sale.woo_id.present?
           .icon-woo.w-5.h-5
-        = item.sale.title  
+        = item.sale.title
   td.max-w-xs
     - if item.sale.present?
       ul.text-sm
@@ -28,9 +28,10 @@ tr(
           .inline-flex.items-center.gap-2
             = copy_to_clipboard text: item.sale.customer.email, css: "text-xs btn-xs"
             = item.sale.customer.email
-  td.text-sm.font-mono
-    - if item.tracking_number.present?
-      = item.tracking_number
+  td.max-w-3xs id="tracking-cell-#{item.id}"
+    div id="tracking-highlight-#{item.id}"
+    = turbo_frame_tag "tracking_number_#{item.id}" do
+      = render "purchase_items/tracking_display", purchase_item: item, inline: true
   td = item.purchase.supplier.title
   td.w-45 = render "_shared/purchase_payment_progress", progress: item.purchase.progress, paid: item.purchase.item_paid, price: item.purchase.item_price, debt: item.purchase.item_debt
   td.actions.text-sm
