--- a/app/views/warehouses/_purchase_items.html.slim
+++ b/app/views/warehouses/_purchase_items.html.slim
@@ -12,7 +12,7 @@
       = render "_shared/move_to_warehouse/form", form_url: move_purchase_items_path(warehouse_id: @warehouse.id)
 
       table data-controller="table"
-        thead
+        thead.sticky.top-0.bg-white.dark:bg-gray-900.z-20
           = render "_shared/move_to_warehouse/th"
           th Title
           th Customer
