--- a/app/views/warehouses/_purchase_items.html.slim
+++ b/app/views/warehouses/_purchase_items.html.slim
@@ -16,8 +16,8 @@
           = render "_shared/move_to_warehouse/th"
           th Title
           th Customer
-          th Tracking
-          th Shipping
+          th.text-center Tracking
+          th.text-center Shipping
           th
             | Payment Progress
             .flex.justify-between.text-xs.font-medium.opacity-80
