--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -133,7 +133,7 @@
     @apply w-full border-collapse table-auto text-left border-b mt-3;
   }
   thead {
-    @apply shadow-[0_4px_0_0] shadow-gray-100 dark:shadow-gray-800 sticky top-0 bg-white dark:bg-gray-900 z-20;
+    @apply shadow-[0_4px_0_0] shadow-gray-100 dark:shadow-gray-800 sticky top-0 backdrop-blur-md bg-white/70 dark:bg-gray-900/70 z-20;
   }
   tbody tr:first-child td {
     @apply pt-4;
