--- a/app/views/_shared/_copy_to_clipboard.html.slim
+++ b/app/views/_shared/_copy_to_clipboard.html.slim
@@ -1,4 +1,4 @@
-button.btn-rounded.no-events.cursor-pointer(
+button.btn-rounded.no-events.cursor-pointer.transition-all.ease-out(
   type="button"
   data-controller="copy-to-clipboard"
   data-copy-to-clipboard-text-value=text
