improve(ui): Make buttons and inputs smaller
- Reduced padding on buttons, inputs, and search fields in application.css
- Updated slim-select main height to 38px
- Changed clear button to red variant with exit icon and text in search form view

--- a/app/views/_shared/_search-form.html.slim
+++ b/app/views/_shared/_search-form.html.slim
@@ -4,6 +4,6 @@
     i.icn 🔎
     | Search
   - if params[:q]
-    = link_to path, class: "ml-2 btn-rounded"
-      i.icn 🧹
-      | Clear
+    = link_to path, class: "ml-2 btn-rounded btn-red"
+      i.icn ❎
+      | Exit
