--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -55,7 +55,7 @@
   input[type="submit"],
   input[type="button"],
   button {
-    @apply cursor-pointer font-medium no-underline inline-flex items-center justify-center gap-2 px-2 py-2 rounded-sm bg-gray-100 hover:bg-gray-200 dark:bg-gray-700 dark:hover:bg-gray-600 transition-all duration-150;
+    @apply cursor-pointer font-medium no-underline inline-flex items-center justify-center gap-1.5 px-2 py-1.5 rounded-sm bg-gray-100 hover:bg-gray-200 dark:bg-gray-700 dark:hover:bg-gray-600 transition-all duration-150;
   }
 
   a.link {
@@ -71,7 +71,7 @@
   select,
   .ss-main,
   textarea {
-    @apply appearance-none w-full pl-3 pr-10 py-2 cursor-pointer border-1 border-gray-300/80 dark:border-gray-600/80 rounded-sm bg-white dark:bg-gray-800;
+    @apply appearance-none w-full pl-3 pr-10 py-1.5 cursor-pointer border border-gray-300/80 dark:border-gray-600/80 rounded-sm bg-white dark:bg-gray-800;
   }
 
   textarea {
@@ -125,7 +125,7 @@
   }
 
   input[type="search"] {
-    @apply w-full rounded-full px-4 py-2 border-gray-300 dark:border-gray-600;
+    @apply w-full rounded-full px-4 py-1.5 border-gray-300 dark:border-gray-600;
   }
 
   /* Tables */
@@ -227,7 +227,7 @@
     @apply w-fit text-xs px-1.5! py-1! gap-0.5!;
   }
   .btn-rounded {
-    @apply rounded-full px-3 border-gray-200 dark:border-gray-600;
+    @apply rounded-full px-2.5 border-gray-200 dark:border-gray-600;
   }
   .btn-red,
   .undo {
